sandbox/output
FtsTranslator.java:3: error: ')' expected
        if (keywords.endsWith("*") {
                                  ^
1 error
